# Messenger

./: CMakeLists.txt
Client/: CMakeLists.txt  login.cpp  login.h  main.cpp  user.cpp  user.h  widget.cpp  widget.h  widget.ui
Server/: CMakeLists.txt  checknameresponse.h  main.cpp  server.cpp  server.h  user.h
